--- a/Gym Web Application/Gym Web Application/Views/Employees/AddEmployees.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Employees/AddEmployees.cshtml
@@ -42,6 +42,11 @@
                         </div>
                     <span id="address-error" class="error-message"></span>
                     <br>
+                     <div>
+                        <input class="add-user-input" type="password" placeholder="Password" asp-for="Password">
+                        </div>
+                    <span id="password-error" class="error-message"></span>
+                    <br>
 
                     <button class="btn btn-add-form" type="submit">
                         Add Employee
