--- a/Gym Web Application/Gym Web Application/Views/Employees/ViewEmployees.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Employees/ViewEmployees.cshtml
@@ -1,3 +1,4 @@
+@model List<Gym_Web_Application.Models.EmployeeModel>
 @{
     ViewData["Title"] = "Employees";
 }
@@ -32,12 +33,14 @@
                             </tr>
                         </thead>
                         <tbody>
+                            @foreach(var employee in Model)
+                            {
                             <tr>
-                                <td>1</td>
-                                <td>Fatemah Hatem</td>
-                                <td>fatemahhatem@gmail.com</td>
-                                <td>01091119866</td>
-                                <td>Sales Representative</td>
+                                <td>@employee.ID</td>
+                                <td>@employee.Name</td>
+                                <td>@employee.Email</td>
+                                <td>@employee.PhoneNumber</td>
+                                <td>@ViewBag.JobTitles[@employee.JobTitleID].Name</td>
                                 <td>
                                     <a class="btn btn-sm btn-primary">Edit</a>
                                     <form method="post" style="display: inline;">
@@ -46,6 +49,7 @@
                                 </td>
 
                             </tr>
+                            }
 
 
                         </tbody>
