activate-delete works

--- a/Gym Web Application/Gym Web Application/Views/Memberships/ViewMemberships.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Memberships/ViewMemberships.cshtml
@@ -76,7 +76,7 @@
                                         @membership.InbodySessionsCount
                                     </td>
                                     <td>
-                                        @membership.isActivated
+                                        @membership.IsActivated
                                     </td>
                                     <td>
                                         <a href="packagesAdminDash.html" class="btn btn-sm btn-freeze">Freeze</a>
